[gd_scene load_steps=2 format=3 uid="uid://c8xxnrif73mev"]

[ext_resource type="Script" path="res://Scenes/Play/YouWin/YouWin.gd" id="1_807s4"]

[node name="YouWin" type="Control"]
process_mode = 3
top_level = true
z_index = 9
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_807s4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="YouWin" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 164
text = "You Win!"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 64

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Points: "
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 180

[node name="NextLevel" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Next level"

[node name="ExitToMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Exit to menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitToMenu" to="." method="_on_exit_to_menu_pressed"]
